--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"autoprefixer": "10.4.20",
 		"bcrypt": "^5.1.1",
 		"clsx": "^2.1.1",
-		"next": "^15.4.0-canary.83",
-		"next-auth": "5.0.0-beta.25",
+		"next": "^15.3.4",
+		"next-auth": "^5.0.0-beta.25",
+		"pnpm": "^10.12.1",
 		"postcss": "8.5.1",
 		"postgres": "^3.4.6",
 		"react": "latest",
